--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: install tool binaries
         shell: bash
         run: |
-          curl -sfL https://get.sameproject.org | bash -
+          curl -L0 https://sameproject.org | bash -
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo mv ./kubectl /usr/local/bin/kubectl
@@ -27,12 +27,13 @@ jobs:
           mkdir -p ~/.same
           touch ~/.same/config
           echo "activecontext: " >> ~/.same/config.yaml
-      - name: bootstrap flux
-        shell: bash
-        run: |
-          export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
-          flux bootstrap github --owner=chanwit --repository=emas-ci --token-auth --path=cluster
+      #- name: bootstrap flux
+      #  shell: bash
+      #  run: |
+      #    export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
+      #    flux bootstrap github --owner=chanwit --repository=emas-ci --token-auth --path=cluster
       - name: run same program
         shell: bash
         run: |
+          same init
           same program run --file same.yaml --experiment-name "${{ github.repository }}" --run-name "${{ github.sha }}"`
