test with old installation url

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -14,7 +14,8 @@ jobs:
       - name: install tool binaries
         shell: bash
         run: |
-          curl -L0 https://sameproject.org | bash -
+          curl -sfL https://get.sameproject.org | bash -
+          # curl -L0 https://sameproject.org | bash -
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo mv ./kubectl /usr/local/bin/kubectl
