--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -15,6 +15,7 @@ jobs:
         shell: bash
         run: |
           curl -sfL https://get.sameproject.org | bash -
+          same --version
           # curl -L0 https://sameproject.org | bash -
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
