--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -18,7 +18,7 @@ jobs:
           # curl -L0 https://sameproject.org | bash -          
 
           curl -fsSL https://github.com/SAME-Project/SAMPLE-CLI-TESTER/releases/download/0.0.40/same_0.0.40_linux_amd64.tar.gz | tar xfz -
-          mv same /usr/local/bin/same
+          sudo mv ./same /usr/local/bin/same
           same --version
 
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
