--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -24,6 +24,18 @@ jobs:
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           sudo mv ./kubectl /usr/local/bin/kubectl
+      - name: set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: install pip
+        run: |
+          python -m pip install --upgrade pip
+      - name: install required packages
+        run: |
+          python3 -m pip install -U setuptools wheel pip
+          pip install -y poetry kfp
+
       - name: setup credentails
         shell: bash
         run: |
