--- a/same.yaml
+++ b/same.yaml
@@ -1,18 +1,53 @@
 apiVersion: projectsame.io/v1alpha1
 metadata:
-    name: CrossSellPrediction
-    version: 0.0.0
+    name: HousePriceSample
+    sha: deadbeef
+    labels:
+        label1: value1
+    version: 1.0.4
+bases:
+    - base
+envfiles:
+    - .env
+resources:
+    provider: azure
+    cluster_profile: default
+    # cluster_profile: highMem
+    # cluster_profile: GPU
+    cluster_name: foobaz
+    namespace: same_namespace
+    disks:
+        - name: data_disk
+          size: 10Gi
+          volumeMount:
+              mountPath: "/mnt/data_disk"
+              name: volume
+        - name: model_disk
+          size: 10Gi
+          volumeMount:
+              mountPath: "/mnt/model_disk"
+              name: volume
 workflow:
     type: kubeflow
     parameters:
         kubeflowVersion: 1.2
         kubeflowNamespace: kubeflow # Only support Kubeflow namespace
-        credentialFile: porter-kfp
+        services:
+            - tensorflow_crd:2.1
+            - pytorch_crd:1.8
 pipeline:
-    name: "training"
-    description: "An example pipeline that trains a model to perform cross-sell prediction"
-    package: "pipelines/pipeline-dev.tar.gz"
+    name: "House Prices - Advanced Regression Techniques"
+    description: "House Prices - Advanced Regression Techniques"
+    package: "houseprice.py"
+datasets:
+    - name: "DS1 name"
+      type: remote
+      url: "https://unused.com"
+      makeLocalCopy: true
 run:
-    name: "default"
+    name: "My Run"
     parameters:
-        epochs: 10
+        epochs: 350
+        batch_size: 200
+debugging_features_flags:
+    createStorage: false
