revert flux back

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -15,10 +15,6 @@ jobs:
         shell: bash
         run: |
           curl -L0 https://get.sameproject.org | bash -
-          # curl -sfL https://get.sameproject.org | bash -
-          # curl -L0 https://sameproject.org | bash -          
-          # curl -fsSL https://github.com/SAME-Project/SAMPLE-CLI-TESTER/releases/download/0.0.40/same_0.0.40_linux_amd64.tar.gz | tar xfz -
-          # sudo mv ./same /usr/local/bin/same
           same --version
 
           curl -s https://toolkit.fluxcd.io/install.sh | sudo bash
@@ -34,7 +30,7 @@ jobs:
       - name: install required packages
         run: |
           python3 -m pip install -U setuptools wheel pip
-          pip install poetry kfp
+          pip install kfp
 
       - name: setup credentails
         shell: bash
@@ -45,13 +41,13 @@ jobs:
           mkdir -p ~/.same
           touch ~/.same/config
           echo "activecontext: " >> ~/.same/config.yaml
-      #- name: bootstrap flux
-      #  shell: bash
-      #  run: |
-      #    export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
-      #    flux bootstrap github --owner=chanwit --repository=emas-ci --token-auth --path=cluster
+      - name: bootstrap flux
+        shell: bash
+        run: |
+          export GITHUB_TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          flux bootstrap github --owner=chanwit --repository=emas-ci --token-auth --path=cluster
       - name: run same program
         shell: bash
         run: |
-          same init
+          same init --ready
           same program run --file same.yaml --experiment-name "${{ github.repository }}" --run-name "${{ github.sha }}"
